--- a/index.html
+++ b/index.html
@@ -98,8 +98,62 @@
                 </div>
                 <div class="hamburger">
                     <span></span>
-                    <span class="long"></span>
                     <span></span>
+                    <span></span>
+                </div>
+            </div>
+            <div class="mobile">
+                <div class="mobile__search">
+                    <input class="mobile__search-input" type="search" placeholder="Search City">
+                    <img src="icons/header/search.svg" alt="search" class="mobile__search-icon">
+                </div>
+                <div class="mobile__nav">
+                    <nav>
+                        <li class="mobile__item active">
+                            <a class="mobile__today" target="_self" href="#">Сегодня</a>
+                        </li>
+                        <li class="mobile__item">
+                            <a class="mobile__hourly" href="hourly/hourly.html">Почасовой прогноз</a>
+                        </li>
+                        <li class="mobile__item">
+                            <a class="mobile__week" href="weekly/week.html">На 7 дней</a>
+                        </li>
+                        <li class="mobile__item">
+                            <a class="nav__air-quality" href="air-quality/air.html">Индекс качества воздуха</a>
+                        </li>
+                        <li class="mobile__item">
+                            <a class="mobile__maps" href="maps/maps.html">Карты</a>
+                        </li>
+                    </nav>
+                </div>
+                <div class="mobile__menu">
+                    <div class="mobile__divider"></div>
+                    <div class="mobile__lang">
+                        <div id="en" class="mobile__lang-item">
+                            <span>English</span>
+                            <img src="icons/menu/eng-flag.svg" alt="lang-en">
+                        </div>
+                        <div id="ru" class="mobile__lang-item">
+                            <span>Русский</span>
+                            <img src="icons/menu/russia-flag.svg" alt="lang-ru">
+                        </div>
+                    </div>
+                    <div class="mobile__divider"></div>
+                    <div class="mobile__units">
+                        <div id="metric" class="mobile__units-item">Метрическая</div>
+                        <div id="imperial" class="mobile__units-item ">Имперская</div>
+                    </div>
+                    <div class="mobile__divider"></div>
+                    <div class="mobile__theme">
+                        <div id="light" class="mobile__theme-item">
+                            <span>Light</span>
+                            <img src="icons/menu/sun.svg" alt="theme-light">
+                        </div>
+                        <div id="dark" class="mobile__theme-item">
+                            <span>Dark</span>
+                            <img src="icons/menu/moon.svg" alt="theme-dark">
+                        </div>
+                    </div>
                 </div>
             </div>
     </header>
