mobile main page

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                             <a class="mobile__week" href="weekly/week.html">На 7 дней</a>
                         </li>
                         <li class="mobile__item">
-                            <a class="nav__air-quality" href="air-quality/air.html">Индекс качества воздуха</a>
+                            <a class="mobile__air-quality" href="air-quality/air.html">Индекс качества воздуха</a>
                         </li>
                         <li class="mobile__item">
                             <a class="mobile__maps" href="maps/maps.html">Карты</a>
@@ -129,27 +129,27 @@
                 <div class="mobile__menu">
                     <div class="mobile__divider"></div>
                     <div class="mobile__lang">
-                        <div id="en" class="mobile__lang-item">
+                        <div id="mobile_en" class="mobile__lang-item">
                             <span>English</span>
                             <img src="icons/menu/eng-flag.svg" alt="lang-en">
                         </div>
-                        <div id="ru" class="mobile__lang-item">
+                        <div id="mobile_ru" class="mobile__lang-item">
                             <span>Русский</span>
                             <img src="icons/menu/russia-flag.svg" alt="lang-ru">
                         </div>
                     </div>
                     <div class="mobile__divider"></div>
                     <div class="mobile__units">
-                        <div id="metric" class="mobile__units-item">Метрическая</div>
-                        <div id="imperial" class="mobile__units-item ">Имперская</div>
+                        <div id="mobile_metric" class="mobile__units-item">Метрическая</div>
+                        <div id="mobile_imperial" class="mobile__units-item ">Имперская</div>
                     </div>
                     <div class="mobile__divider"></div>
                     <div class="mobile__theme">
-                        <div id="light" class="mobile__theme-item">
+                        <div id="mobile_light" class="mobile__theme-item">
                             <span>Light</span>
                             <img src="icons/menu/sun.svg" alt="theme-light">
                         </div>
-                        <div id="dark" class="mobile__theme-item">
+                        <div id="mobile_dark" class="mobile__theme-item">
                             <span>Dark</span>
                             <img src="icons/menu/moon.svg" alt="theme-dark">
                         </div>
@@ -525,5 +525,6 @@
     <script src="js/script.js" type="module"></script>
     <script src="js/menu.js" type="module"></script>
     <script src="js/air-quality.js" type="module"></script>
+    <script src="js/mobile.js" type="module"></script>
 </body>
 </html>
