--- a/hourly/hourly.html
+++ b/hourly/hourly.html
@@ -111,7 +111,7 @@
                 <a class="nav__week" href="../weekly/week.html">На 7 дней</a>
             </li>
             <li class="nav__item">
-                <a class="nav__air-quality" href="#">Индекс качества воздуха</a>
+                <a class="nav__air-quality" href="../air-quality/air.html">Индекс качества воздуха</a>
             </li>
             <li class="nav__item">
                 <a class="nav__maps" href="#">Карты</a>
