--- a/weekly/week.html
+++ b/weekly/week.html
@@ -258,7 +258,7 @@
                     </div>
                 </div>
             </div>
-        <a class="weekly-weather__button" href="#">Прогноз на 14 дн</a>
+        <a class="weekly-weather__button" href="../hourly/hourly.html">Прогноз на 14 дн</a>
         </div>
     </div>
 </main>
