--- a/hourly/hourly.html
+++ b/hourly/hourly.html
@@ -219,7 +219,7 @@
                     </div>
                 </div>
             </div>
-        <a class="hourly-weather__button" href="#">Прогноз на 7 дн</a>
+        <a class="hourly-weather__button" href="../weekly/week.html">Прогноз на 7 дн</a>
         </div>
         
     </div>
