--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                                 <div class="current-conditions__wind-descr">Ветер</div>
                                 </div>
                                 <div class="current-conditions__details-wrapper">
-                                    <img class="current-conditions__wind-dir" src="icons/currentconditions/wind-arrow.svg" alt="wind-arrow-img">
+                                    <svg class="current-conditions__wind-dir" data-testid="Icon" style="transform: rotate(0deg);" set="current-conditions" aria-hidden="true" viewBox="0 0 24 24" width="24"  height="24"><path stroke="#2B2B2B" fill="none" d="M18.467 4.482l-5.738 5.738a1.005 1.005 0 0 1-1.417 0L5.575 4.482l6.446 16.44 6.446-16.44z"></path></svg>
                                     <div class="current-conditions__wind-value"></div>
                                 </div>
                             </div>
