--- a/hourly/hourly.html
+++ b/hourly/hourly.html
@@ -96,6 +96,65 @@
                     </div>
                 </div>
             </div>
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
+        <div class="mobile">
+            <div class="mobile__search">
+                <input class="mobile__search-input" type="search" placeholder="Search City">
+                <img src="icons/header/search.svg" alt="search" class="mobile__search-icon">
+            </div>
+            <div class="mobile__nav">
+                <nav>
+                    <li class="mobile__item">
+                        <a class="mobile__today" href="../index.html">Сегодня</a>
+                    </li>
+                    <li class="mobile__item active">
+                        <a class="mobile__hourly" target="_self" href="#">Почасовой прогноз</a>
+                    </li>
+                    <li class="mobile__item">
+                        <a class="mobile__week" href="../weekly/week.html">На 7 дней</a>
+                    </li>
+                    <li class="mobile__item">
+                        <a class="mobile__air-quality" href="../air-quality/air.html">Индекс качества воздуха</a>
+                    </li>
+                    <li class="mobile__item">
+                        <a class="mobile__maps" href="../maps/maps.html">Карты</a>
+                    </li>
+                </nav>
+            </div>
+            <div class="mobile__menu">
+                <div class="mobile__divider"></div>
+                <div class="mobile__lang">
+                    <div id="mobile_en" class="mobile__lang-item">
+                        <span>English</span>
+                        <img src="icons/menu/eng-flag.svg" alt="lang-en">
+                    </div>
+                    <div id="mobile_ru" class="mobile__lang-item">
+                        <span>Русский</span>
+                        <img src="icons/menu/russia-flag.svg" alt="lang-ru">
+                    </div>
+                </div>
+                <div class="mobile__divider"></div>
+                <div class="mobile__units">
+                    <div id="mobile_metric" class="mobile__units-item">Метрическая</div>
+                    <div id="mobile_imperial" class="mobile__units-item ">Имперская</div>
+                </div>
+                <div class="mobile__divider"></div>
+                <div class="mobile__theme">
+                    <div id="mobile_light" class="mobile__theme-item">
+                        <span>Light</span>
+                        <img src="icons/menu/sun.svg" alt="theme-light">
+                    </div>
+                    <div id="mobile_dark" class="mobile__theme-item">
+                        <span>Dark</span>
+                        <img src="icons/menu/moon.svg" alt="theme-dark">
+                    </div>
+                </div>
+            </div>
         </div>
     </header>
     <div class="nav">
@@ -144,7 +203,7 @@
                         </div>
                         <div class="hourly-weather__item-wind">
                             <img src="icons/currentconditions/wind.svg" alt="wind-img">
-                            <img class="hourly-weather__item-wind-arrow-img" src="icons/currentconditions/wind-arrow.svg" alt="wind-arrow-img">
+                            <svg class="hourly-weather__item-wind-arrow-img" style="transform: rotate(0deg);"viewBox="0 0 24 24" width="24"  height="24"><path stroke="#2B2B2B" fill="none" d="M18.467 4.482l-5.738 5.738a1.005 1.005 0 0 1-1.417 0L5.575 4.482l6.446 16.44 6.446-16.44z"></path></svg>
                             <div class="hourly-weather__item-wind-descr">5 м/с</div>
                         </div>
                         <img src="icons/hourly/more.svg" alt="more-img" class="hourly-weather__item-more">
@@ -221,7 +280,6 @@
             </div>
         <a class="hourly-weather__button" href="../weekly/week.html">Прогноз на 7 дн</a>
         </div>
-        
     </div>
     </main>
     <div class="pageup fade">
@@ -270,5 +328,6 @@
     <script src="js/menu.js" type="module"></script>
     <script src="js/toggleItem.js"></script>
     <script src="js/scroll.js"></script>
+    <script src="js/mobile.js" type="module"></script>
 </body>
 </html>
