--- a/weekly/week.html
+++ b/weekly/week.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
     <!-- Primary Meta Tags -->
     <title>The Weather Forecast</title>
     <meta name="title" content="The Weather Forecast">
@@ -96,7 +95,65 @@
                     </div>
                 </div>
             </div>
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
+        <div class="mobile">
+            <div class="mobile__search">
+                <input class="mobile__search-input" type="search" placeholder="Search City">
+                <img src="icons/header/search.svg" alt="search" class="mobile__search-icon">
+            </div>
+            <div class="mobile__nav">
+                <nav>
+                    <li class="mobile__item">
+                        <a class="mobile__today" href="../index.html">Сегодня</a>
+                    </li>
+                    <li class="mobile__item">
+                        <a class="mobile__hourly" href="../hourly/hourly.html">Почасовой прогноз</a>
+                    </li>
+                    <li class="mobile__item active">
+                        <a class="mobile__week" target="_self" href="#">На 7 дней</a>
+                    </li>
+                    <li class="mobile__item">
+                        <a class="mobile__air-quality" href="../air-quality/air.html">Индекс качества воздуха</a>
+                    </li>
+                    <li class="mobile__item">
+                        <a class="mobile__maps" href="../maps/maps.html">Карты</a>
+                    </li>
+                </nav>
+            </div>
+            <div class="mobile__menu">
+                <div class="mobile__divider"></div>
+                <div class="mobile__lang">
+                    <div id="mobile_en" class="mobile__lang-item">
+                        <span>English</span>
+                        <img src="icons/menu/eng-flag.svg" alt="lang-en">
+                    </div>
+                    <div id="mobile_ru" class="mobile__lang-item">
+                        <span>Русский</span>
+                        <img src="icons/menu/russia-flag.svg" alt="lang-ru">
+                    </div>
+                </div>
+                <div class="mobile__divider"></div>
+                <div class="mobile__units">
+                    <div id="mobile_metric" class="mobile__units-item">Метрическая</div>
+                    <div id="mobile_imperial" class="mobile__units-item ">Имперская</div>
+                </div>
+                <div class="mobile__divider"></div>
+                <div class="mobile__theme">
+                    <div id="mobile_light" class="mobile__theme-item">
+                        <span>Light</span>
+                        <img src="icons/menu/sun.svg" alt="theme-light">
+                    </div>
+                    <div id="mobile_dark" class="mobile__theme-item">
+                        <span>Dark</span>
+                        <img src="icons/menu/moon.svg" alt="theme-dark">
+                    </div>
+                </div>
+            </div>
 </header>
 <div class="nav">
     <div class="container">
@@ -146,7 +203,7 @@
                         </div>
                         <div class="weekly-weather__wind">
                             <img src="icons/currentconditions/wind.svg" alt="wind-img">
-                            <img class="weekly-weather__wind-arrow" src="icons/currentconditions/wind-arrow.svg" alt="wind-arrow-img">
+                            <svg class="weekly-weather__wind-arrow" style="transform: rotate(0deg);"viewBox="0 0 24 24" width="24"  height="24"><path stroke="#2B2B2B" fill="none" d="M18.467 4.482l-5.738 5.738a1.005 1.005 0 0 1-1.417 0L5.575 4.482l6.446 16.44 6.446-16.44z"></path></svg>
                             <div class="weekly-weather__wind-descr">4.23 м/c</div>
                         </div>
                         <img class="weekly-weather__more" src="icons/hourly/more.svg" alt="more-img">
@@ -161,11 +218,11 @@
                                 <div class="weekly-weather__sun-data">
                                     <div class="weekly-weather__sunrise">
                                         <img src="icons/currentconditions/sunrise.svg" alt="sunrise-img">
-                                        <div class="weekly-weather__sunrise-text">07:25</div>
+                                        <div class="weekly-weather__sunrise-text">07:25 AM</div>
                                     </div>
                                     <div class="weekly-weather__sunset">
                                         <img src="icons/currentconditions/sunset.svg" alt="sunset-img">
-                                        <div class="weekly-weather__sunset-text">07:25</div>
+                                        <div class="weekly-weather__sunset-text">07:25 PM</div>
                                     </div>
                                 </div>
                             </div>
@@ -304,5 +361,6 @@
 <script src="js/toggleItem.js"></script>
 <script src="js/script.js" type="module"></script>
 <script src="js/menu.js" type="module"></script>
+<script src="js/mobile.js" type="module"></script>
 </body>
 </html>
