--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                             <div class="today-weather__details-item">
                                 <div class="today-weather__details-daytime">Утро</div>
                                 <div class="today-weather__details-temp">-6</div>
-                                <img class="today-weather__details-img" src="icons/openweathermap/01d.svg" alt="details-img">
+                                <img class="today-weather__details-img" src="icons/na.svg" alt="details-img">
                                 <div class="today-weather__details-pop">
                                     <img src="icons/hourly/umbrella.svg" alt="precipitation-img">
                                     <div class="today-weather__details-popValue">75%</div>
@@ -257,8 +257,8 @@
                             </div>
                             <div class="current-conditions__sun">
                                 <div class="current-conditions__graph">
-                                    <img class="current-conditions__graph-primary" src="icons/currentconditions/arc.svg" alt="arc-svg">
-                                    <img class="current-conditions__graph-secondary" src="icons/currentconditions/sun.svg" alt="sun-svg">
+                                    <svg xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" class="current-conditions__graph-primary" width="80" height="40"><path d="M -13.5 26.5 a 1 1 0 0 0 80 0" style="transform-origin: 40px 40px; transform: rotate(180deg);" stroke="#E87538" fill="none" stroke-width="3px" stroke-linecap="round"></path></svg>
+                                    <svg xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" class="current-conditions__graph-secondary" width="24"  height="24" ><circle cx="12" cy="12" r="12" fill="#ffffff"></circle><path fill="#F7C044" d="M18.405 17.661a1 1 0 0 1-1.437 1.391l-1.665-1.72a1 1 0 1 1 1.437-1.39l1.665 1.72zm-5.541 2.651a1 1 0 0 1-2 0v-2.366a1 1 0 1 1 2 0v2.366zm-6.718-1.624a1 1 0 0 1-1.357-1.469l1.758-1.624a1 1 0 1 1 1.357 1.47l-1.758 1.623zm-2.753-5.769a1 1 0 1 1 .002-2l2.422.001a1 1 0 0 1-.001 2l-2.423-.001zm1.77-6.115A1 1 0 0 1 6.6 5.414l1.664 1.719a1 1 0 0 1-1.436 1.391l-1.665-1.72zm5.751-3.391a1 1 0 1 1 2 0v2.366a1 1 0 0 1-2 0V3.413zm6.5 1.903a1 1 0 1 1 1.356 1.47l-1.757 1.623a1 1 0 1 1-1.357-1.47l1.758-1.623zm3.005 6.114a1 1 0 0 1-.002 2l-2.422-.001a1 1 0 0 1 .001-2l2.423.001z"></path><ellipse fill="#F7C044" cx="11.85" cy="11.935" rx="3.225" ry="3.256"></ellipse></svg>
                                 </div>
                                 <div class="current-conditions__sun-data">
                                     <div class="current-conditions__sunrise">
