--- a/weekly/week.html
+++ b/weekly/week.html
@@ -45,7 +45,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
-<body>
+<body class="dark">
     <header class="header">
         <div class="header__wrapper">
             <a class="header__logo" href="../index.html"><img src="icons/header/logo.svg" alt="logo"></a>
@@ -211,10 +211,6 @@
                     <div class="weekly-weather__secondary">
                         <div class="weekly-weather__column">
                             <div class="weekly-weather__sun">
-                                <div class="weekly-weather__sun-graph">
-                                    <img class="weekly-weather__sun-graph-primary" src="icons/currentconditions/arc.svg" alt="arc-svg">
-                                    <img class="weekly-weather__sun-graph-secondary" src="icons/currentconditions/sun.svg" alt="">
-                                </div>
                                 <div class="weekly-weather__sun-data">
                                     <div class="weekly-weather__sunrise">
                                         <img src="icons/currentconditions/sunrise.svg" alt="sunrise-img">
