--- a/index.html
+++ b/index.html
@@ -520,5 +520,6 @@
     <script src="js/menu.js" type="module"></script>
     <script src="js/air-quality.js" type="module"></script>
     <script src="js/mobile.js" type="module"></script>
+    <script src="js/search.js" type="module"></script>
 </body>
 </html>
