--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
                 <div class="header__search">
                     <input class="header__search-input" type="search" placeholder="Search City">
                     <img src="icons/header/search.svg" alt="search" class="header__search-icon">
+                    <div class="header__search-results">
+                    </div>
                 </div>
                 <button class="header__selector">
                     <img class="header__selector-global" src="icons/header/global.svg" alt="global">
