--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                 <div class="mobile__search">
                     <input class="mobile__search-input" type="search" placeholder="Search City">
                     <img src="icons/header/search.svg" alt="search" class="mobile__search-icon">
+                    <div class="mobile__search-results"></div>
                 </div>
                 <div class="mobile__nav">
                     <nav>
