--- a/weekly/week.html
+++ b/weekly/week.html
@@ -45,7 +45,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
-<body class="dark">
+<body>
     <header class="header">
         <div class="header__wrapper">
             <a class="header__logo" href="../index.html"><img src="icons/header/logo.svg" alt="logo"></a>
@@ -107,6 +107,7 @@
             <div class="mobile__search">
                 <input class="mobile__search-input" type="search" placeholder="Search City">
                 <img src="icons/header/search.svg" alt="search" class="mobile__search-icon">
+                <div class="mobile__search-results"></div>
             </div>
             <div class="mobile__nav">
                 <nav>
@@ -349,10 +350,10 @@
         </div>
     </div>
 </footer>
-<script src="js/settings.js" type="module"></script>
 <script src="js/toggleItem.js"></script>
 <script src="js/script.js" type="module"></script>
 <script src="js/menu.js" type="module"></script>
 <script src="js/mobile.js" type="module"></script>
+<script src="js/search.js" type="module"></script>
 </body>
 </html>
