--- a/hourly/hourly.html
+++ b/hourly/hourly.html
@@ -108,6 +108,7 @@
             <div class="mobile__search">
                 <input class="mobile__search-input" type="search" placeholder="Search City">
                 <img src="icons/header/search.svg" alt="search" class="mobile__search-icon">
+                <div class="mobile__search-results"></div>
             </div>
             <div class="mobile__nav">
                 <nav>
@@ -319,11 +320,11 @@
         </div>
     </div>
     </footer>
-    <script src="js/settings.js" type="module"></script>
     <script src="js/script.js" type="module"></script>
     <script src="js/menu.js" type="module"></script>
     <script src="js/toggleItem.js"></script>
     <script src="js/scroll.js"></script>
     <script src="js/mobile.js" type="module"></script>
+    <script src="js/search.js" type="module"></script>
 </body>
 </html>
